# drug-mapping

./: .env  .env.example  .gitignore  LICENSE  README.md  create-db.sql  docker-compose.yml  init-mongo.js
backend/python-services/drug-label-processor/: .env  .env.example  README.md  conftest.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/python-services/drug-label-processor/src/: main.py
backend/python-services/drug-label-processor/src/application/services/: ai_agent_service.py  mapper_service.py
backend/python-services/drug-label-processor/src/core/entities/: drug_label.py
backend/python-services/drug-label-processor/src/core/repositories/: drug_label_repository.py
backend/python-services/drug-label-processor/src/core/services/: indication_mapper.py
backend/python-services/drug-label-processor/src/infrastructure/database/: mongo_database.py  mongo_drug_label_repository.py
backend/python-services/drug-label-processor/src/infrastructure/interfaces/: drug_label_interface.py
backend/python-services/drug-label-processor/src/infrastructure/llm/: phi2_indication_mapper.py
backend/python-services/drug-label-processor/tests/integration/: test_mongo_integration.py  test_phi2_mapper_integration.py
backend/python-services/scraper-service/: .env  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/python-services/scraper-service/src/: config.py  main.py
backend/python-services/scraper-service/src/api/controller/: drug_controller.py
backend/python-services/scraper-service/tests/: conftest.py
(+49 files in other folders)
